--- a/indice.html
+++ b/indice.html
@@ -1,1 +1,19 @@
 <!DOCTYPE html>
+<html>
+    <head>
+    <meta charset="UTF-8">
+    <title>Indice</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    </head>
+
+    <body background="Inteligencia.jpg">
+        <div class="presentacion">
+            <div class="Dispositiva">
+                <H1>Indice</H1>
+            </div>
+            <div class="Dispositiva2">
+            <a href="Introducción.html">Introduccion</a>
+            </div>
+        </div>
+    </body>
+</html>
