--- a/Introduccion.html
+++ b/Introduccion.html
@@ -23,7 +23,7 @@
         <a href="indice.html">Indice</a>
         </div>
         <div class="Dispositiva4">
-        <a href="Tipos de Aprendizaje Automático.html">Siguiente</a>
+        <a href="Tipos deAprendizaje Automatico.html">Siguiente</a>
         </div>
     </body>
 </html>
