--- a/indice.html
+++ b/indice.html
@@ -12,7 +12,7 @@
                 <H1>Indice</H1>
             </div>
             <div class="Dispositiva2">
-            <a href="Introducción.html">Introduccion</a>
+            <a href="Introduccion.html">Introduccion</a>
             </div>
         </div>
     </body>
