--- a/Tipos deAprendizaje Automatico.html
+++ b/Tipos deAprendizaje Automatico.html
@@ -26,7 +26,7 @@
         </div>
         <br>
         <div class="Dispositiva5">
-        <a href="Algoritmos de Aprendizaje Automatico.html">Siguiente</a>
+        <a href="Algoritmo de Aprendizaje Automatico.html">Siguiente</a>
         </div>
     </body>
 </html>
