--- a/Desafios y Etica en el Aprendizaje Automatico.html
+++ b/Desafios y Etica en el Aprendizaje Automatico.html
@@ -2,18 +2,18 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Algoritmo de Aprendizaje Automatico</title>
-        <link rel="stylesheet" type="text/css" href="styles4.css">
+        <title>Desafios y Etica el Aprendizaje Automatico</title>
+        <link rel="stylesheet" type="text/css" href="styles5.css">
     </head>
 
     <body background="Inteligencia.jpg">
         <div class="presentacion">
             <div class="Dispositiva">
-                <H1>Algoritmo de Aprendizaje Automatico</H1>
+                <H1>Desafios y Etica en el Aprendizaje Automatico</H1>
             </div>
             <div class="Dispositiva2">
                 <p class="encabezado">
-                    Los algoritmos de Aprendizaje Automático incluyen regresión lineal, árboles de decisión, máquinas de vectores de soporte y redes neuronales. Cada uno tiene ventajas y desventajas en la clasificación y predicción de datos.
+                    Los desafíos del Aprendizaje Automatico incluyen sesgo algoritmico, privacidad de datos y interpretación de resultados. Es crucial considerar la etica al desarrollar y aplicar algoritmos de Aprendizaje Automatico.
                 </p>
             </div>
         </div>
@@ -31,7 +31,8 @@
         </div>
         <br>
         <div class="Dispositiva6">
-        <a href="Desafios y Etica en el Aprendizaje Automatico.html">Siguiente</a>
+        <a href="Conclusión.html">Siguiente</a>
+        </div>
         </div>
     </body>
 </html>
